[gd_scene load_steps=6 format=3 uid="uid://bt33j5dwxano3"]

[ext_resource type="Texture2D" uid="uid://bacqucona7fm3" path="res://assets/top_ui.png" id="1_j7odh"]
[ext_resource type="Script" uid="uid://pvllt7hbni2e" path="res://scripts/top_ui.gd" id="2_0qkha"]
[ext_resource type="FontFile" uid="uid://b25431rxog83j" path="res://assets/fonts/Kenney Blocks.ttf" id="2_pei76"]

[sub_resource type="LabelSettings" id="LabelSettings_yrpvj"]
font = ExtResource("2_pei76")
font_size = 24

[sub_resource type="LabelSettings" id="LabelSettings_8bjlm"]
font = ExtResource("2_pei76")
font_size = 60

[node name="top_ui" type="TextureRect"]
offset_right = 576.0
offset_bottom = 192.0
texture = ExtResource("1_j7odh")
script = ExtResource("2_0qkha")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 36.26
offset_top = 13.5
offset_right = -28.055
offset_bottom = -44.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_stretch_ratio = 0.0
theme_override_constants/separation = 8

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
clip_contents = true
layout_mode = 2
size_flags_stretch_ratio = 0.0
theme_override_constants/separation = 32
alignment = 1

[node name="score_label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 5
text = "0/1000"
label_settings = SubResource("LabelSettings_yrpvj")

[node name="counter_label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 5
text = "30"
label_settings = SubResource("LabelSettings_8bjlm")
horizontal_alignment = 1
vertical_alignment = 2

[node name="time_label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 5
text = "2:00"
label_settings = SubResource("LabelSettings_yrpvj")
horizontal_alignment = 2
